# tt_bot

./: .env.prod  README.md  debug.html  identifier.sqlite  pyproject.toml
data/BAWiki/: gacha.json
data/eventmonitor/: config.json
data/russian/: russian_data.json
data/word_bank/: bank.json
menu_config/: config.json
plugins/nonebot_plugin_batarot/: __init__.py  commands.py  handler.py
plugins/nonebot_plugin_fgoavatarguess/: __init__.py  _datac.py  game_monitor.py  trie.py
plugins/nonebot_plugin_reborn/: __init__.py
plugins/nonebot_plugin_word_bank2/: __init__.py
